--- a/noaa_api_weather_forecast_nlp_openai_summarization.ipynb
+++ b/noaa_api_weather_forecast_nlp_openai_summarization.ipynb
@@ -252,6 +252,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "RESTART SESSION"
+      ],
+      "metadata": {
+        "id": "FgB3uRfUKdrl"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
